--- a/front/src/util/lngProvider/locales/es_ES.json
+++ b/front/src/util/lngProvider/locales/es_ES.json
@@ -544,8 +544,8 @@
   "appModule.signup": "Regístrate",
   "pages.signin": "Ingreso",
   "pages.signin.description": "Ingreso",
-  "pages.home": "Inicio",
-  "pages.home.description": " ",
+  "pages.misiones": "Misiones",
+  "pages.misiones.description": "¡Resuelve misterios, comparte con personajes históricos y obtén las reliquias multiversales para salvar a la humanidad!\nDescubre y aprende a través de las misiones interactivas que el maestro Virgilio tiene para ti.",
   "pages.consumptions": "Consumos",
   "pages.consumptions.description": "Inspecciona las lecturas de consumo de tus medidores",
   "pages.incomes": "Recaudaciones",
