--- a/front/src/util/lngProvider/locales/es_ES.json
+++ b/front/src/util/lngProvider/locales/es_ES.json
@@ -546,6 +546,10 @@
   "pages.signin.description": "Ingreso",
   "pages.misiones": "Misiones",
   "pages.misiones.description": "¡Resuelve misterios, comparte con personajes históricos y obtén las reliquias multiversales para salvar a la humanidad!\nDescubre y aprende a través de las misiones interactivas que el maestro Virgilio tiene para ti.",
+  "pages.analisis": "Analisis",
+  "pages.analisis.description": "¡Resuelve misterios, comparte con personajes históricos y obtén las reliquias multiversales para salvar a la humanidad!\nDescubre y aprende a través de las misiones interactivas que el maestro Virgilio tiene para ti.",
+  "pages.logros": "Logros",
+  "pages.analisis.description": "¡Resuelve misterios, comparte con personajes históricos y obtén las reliquias multiversales para salvar a la humanidad!\nDescubre y aprende a través de las misiones interactivas que el maestro Virgilio tiene para ti.",
   "pages.consumptions": "Consumos",
   "pages.consumptions.description": "Inspecciona las lecturas de consumo de tus medidores",
   "pages.incomes": "Recaudaciones",
